????/??/?? Timeout System Improvements
  - Generalized timeouts to tasks
  - Modified timeout primitive to create a task with the timeout method.
  - Modified pause primitive to accept an optional timeout in milliseconds.

2008/07/28 LibEvent Restoration
  - Restored event loop from future.
  - Modified core/io module to handle os-connection outputs and inputs.
  - Added os-service type to vm, derived from input, yields os-connections.
  - Added (tcp-serve portno) -> os-service to vm/os.c
  - Corrected optional arguments to be type-specific and refuse subtypes.
  - Added macros for requiring subtype'd arguments.
  - Implemented timeout scheduling.
  - Made makefile default to -DNDEBUG.
  - Added timeout multimethod to core/io to overlay the primitive.
  - Added timeout option to wait multimethod.
  - Fixed (input process) and (output process) methods in core/io.
  - Aliased <number> to <integer>, since eventually integers will be a 
    subset of <number>.
  - Added timeout argument to wait multimethod.

2008/06/24 WaspDoc Integration
  - Added exprs->string primitive.
  - Added write-lisp-file to core/file module.
  - Added string-read-expr! primitive to vm/core.c and vm/string.c
  - Modified string-skip-space! to return number of spaces skipped.
  - Fixed a bug in the parser that considered a single dot to be an incomplete 
    expression; should be an error.
  - Reintegrated WaspDoc from pre-Rewind tree.

2008/06/20 Namespace Cleanup
  - Renamed set primitive to make-set.
  - Renamed dict primitive to make-dict.
  - Renamed tc-append! primitive to tc-add!
  - Renamed tc-splice! primitive to tc-append!
  - Modified tc-add! to accept multiple items, not just one.
  - Modified tc-remove! to accept multiple items, not just one.
  - Modified iter in lib/iterate to generate tc iterators.
  - tc no longer considered a list by list predicate.
  - tc no longer considered a pair by pair predicate.
  - tc no longer a subtype of pair.

2008/06/11 WaspDoc Parses Module Files