@@ -57,6 +57,9 @@ void wasp_init_core_subsystems( ){
     wasp_init_os_subsystem( );
     wasp_init_time_subsystem( );
 
+    wasp_init_regex_subsystem( );
+    wasp_init_filesystem_subsystem( );
+
     wasp_ss_main = wasp_symbol_fs( "main" );
 
     wasp_bind_core_prims( );
