@@ -2,6 +2,10 @@
   - Generalized timeouts to tasks
   - Modified timeout primitive to create a task with the timeout method.
   - Modified pause primitive to accept an optional timeout in milliseconds.
+  - Backported to WIN32, Isolating LibEvent Calls
+  - Note, moved all subsystems back into the core vm; need to explore better
+    ways to export symbols to DLLs than using the all-in-one-dll method.
+  - WaspC works, Wasp doesn't, as expected.
 
 2008/07/28 LibEvent Restoration
   - Restored event loop from future.
